--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ body{
         display: flex;
         flex-flow: row wrap;
         align-items: center;
-        background: url(henry.jpg) no-repeat center center fixed;
+        background: url(media/henry.jpg) no-repeat center center fixed;
         background-size: cover;
     }
     #about-right{
@@ -188,21 +188,21 @@ body{
     
     #projects-oop a{
         padding-top: 100%;
-        background: url(oop.gif) no-repeat center center;
+        background: url(media/oop.gif) no-repeat center center;
         background-size: cover;
         box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
     #projects-python a{
         padding-top: 100%;
-        background: url(python.gif) no-repeat center center;
+        background: url(media/python.gif) no-repeat center center;
         background-size: cover;
         box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
     #projects-web a{
         padding-top: 100%;
-        background: url(wb.gif) no-repeat center center;
+        background: url(media/wb.gif) no-repeat center center;
         background-size: cover;
         box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
